tests: Fix compilation
The e5120a6 backport used an undefined make variable. Not sure
why I didn't hit it at first...

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -625,7 +625,7 @@ commandhelper_LDADD = \
 	$(NO_INDIRECT_LDFLAGS) \
 	$(PROBES_O) \
 	../src/libvirt_util.la \
-	$(GNULIB_LIBS)
+	../gnulib/lib/libgnu.la
 
 commandhelper_LDFLAGS = -static
 
