maint: use portable shell
Reported in https://bugzilla.redhat.com/show_bug.cgi?id=1165827;
dash complains:

checking for pkcheck... /usr/bin/pkcheck
checking whether pkcheck supports uid value... yes
./configure: 63906: test: xno: unexpected operator
checking for dtrace... no

* configure.ac: Use '=' not '==' in test.

Signed-off-by: Eric Blake <eblake@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -1389,7 +1389,7 @@ AC_ARG_WITH([firewalld],
 if test "x$with_firewalld" = "xcheck" ; then
    with_firewalld=$with_dbus
 fi
-if test "x$with_firewalld" == "xyes" ; then
+if test "x$with_firewalld" = "xyes" ; then
   if test "x$with_dbus" != "xyes" ; then
      AC_MSG_ERROR([You must have dbus enabled for firewalld support])
   fi
